--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "dotenv": "^10.0.0",
     "riot-lol-api": "^4.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
